Format source files with my config

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -31,18 +31,17 @@ set_tests_properties(cli.version_matches PROPERTIES PASS_REGULAR_EXPRESSION "${P
 
 add_executable(tests tests.cpp)
 target_link_libraries(
-  tests
-  PRIVATE myproject::myproject_warnings
-          myproject::myproject_options
-          myproject::sample_library
-          Catch2::Catch2WithMain)
+  tests PRIVATE myproject::myproject_warnings myproject::myproject_options myproject::sample_library
+                Catch2::Catch2WithMain
+)
 
 if(WIN32 AND BUILD_SHARED_LIBS)
   add_custom_command(
     TARGET tests
     PRE_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_RUNTIME_DLLS:tests> $<TARGET_FILE_DIR:tests>
-    COMMAND_EXPAND_LISTS)
+    COMMAND_EXPAND_LISTS
+  )
 endif()
 
 # automatically discover tests that are defined in catch based test files you can modify the unittests. Set TEST_PREFIX
@@ -58,16 +57,15 @@ catch_discover_tests(
   OUTPUT_PREFIX
   "unittests."
   OUTPUT_SUFFIX
-  .xml)
+  .xml
+)
 
 # Add a file containing a set of constexpr tests
 add_executable(constexpr_tests constexpr_tests.cpp)
 target_link_libraries(
-  constexpr_tests
-  PRIVATE myproject::myproject_warnings
-          myproject::myproject_options
-          myproject::sample_library
-          Catch2::Catch2WithMain)
+  constexpr_tests PRIVATE myproject::myproject_warnings myproject::myproject_options myproject::sample_library
+                          Catch2::Catch2WithMain
+)
 
 catch_discover_tests(
   constexpr_tests
@@ -80,17 +78,16 @@ catch_discover_tests(
   OUTPUT_PREFIX
   "constexpr."
   OUTPUT_SUFFIX
-  .xml)
+  .xml
+)
 
 # Disable the constexpr portion of the test, and build again this allows us to have an executable that we can debug when
 # things go wrong with the constexpr testing
 add_executable(relaxed_constexpr_tests constexpr_tests.cpp)
 target_link_libraries(
-  relaxed_constexpr_tests
-  PRIVATE myproject::myproject_warnings
-          myproject::myproject_options
-          myproject::sample_library
-          Catch2::Catch2WithMain)
+  relaxed_constexpr_tests PRIVATE myproject::myproject_warnings myproject::myproject_options myproject::sample_library
+                                  Catch2::Catch2WithMain
+)
 target_compile_definitions(relaxed_constexpr_tests PRIVATE -DCATCH_CONFIG_RUNTIME_STATIC_REQUIRE)
 
 catch_discover_tests(
@@ -104,4 +101,5 @@ catch_discover_tests(
   OUTPUT_PREFIX
   "relaxed_constexpr."
   OUTPUT_SUFFIX
-  .xml)
+  .xml
+)
