--- a/.github/workflows/template-janitor.yml
+++ b/.github/workflows/template-janitor.yml
@@ -21,7 +21,7 @@ jobs:
 
   template-cleanup:
     name: Cleanup after create
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, ubuntu-latest]
     strategy:
       matrix:
         compiler:
@@ -150,7 +150,7 @@ jobs:
 
   template-rename:
     name: Renames template when a new name is detected
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, ubuntu-latest]
     strategy:
       matrix:
         compiler:
