Adjust for Hello World

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -30,10 +30,7 @@ add_test(NAME cli.version_matches COMMAND intro --version)
 set_tests_properties(cli.version_matches PROPERTIES PASS_REGULAR_EXPRESSION "${PROJECT_VERSION}")
 
 add_executable(tests tests.cpp)
-target_link_libraries(
-  tests PRIVATE myproject::myproject_warnings myproject::myproject_options myproject::sample_library
-                Catch2::Catch2WithMain
-)
+target_link_libraries(tests PRIVATE myproject::myproject_warnings myproject::myproject_options Catch2::Catch2WithMain)
 
 if(WIN32 AND BUILD_SHARED_LIBS)
   add_custom_command(
@@ -63,8 +60,7 @@ catch_discover_tests(
 # Add a file containing a set of constexpr tests
 add_executable(constexpr_tests constexpr_tests.cpp)
 target_link_libraries(
-  constexpr_tests PRIVATE myproject::myproject_warnings myproject::myproject_options myproject::sample_library
-                          Catch2::Catch2WithMain
+  constexpr_tests PRIVATE myproject::myproject_warnings myproject::myproject_options Catch2::Catch2WithMain
 )
 
 catch_discover_tests(
@@ -85,8 +81,7 @@ catch_discover_tests(
 # things go wrong with the constexpr testing
 add_executable(relaxed_constexpr_tests constexpr_tests.cpp)
 target_link_libraries(
-  relaxed_constexpr_tests PRIVATE myproject::myproject_warnings myproject::myproject_options myproject::sample_library
-                                  Catch2::Catch2WithMain
+  relaxed_constexpr_tests PRIVATE myproject::myproject_warnings myproject::myproject_options Catch2::Catch2WithMain
 )
 target_compile_definitions(relaxed_constexpr_tests PRIVATE -DCATCH_CONFIG_RUNTIME_STATIC_REQUIRE)
 
